[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/menu_controller.gd" type="Script" id=1]
[ext_resource path="res://sprites/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_selected.png" type="Texture" id=3]
[ext_resource path="res://themes/basic.tres" type="Theme" id=4]
[ext_resource path="res://fonts/fff-forward.regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/button.png" type="Texture" id=6]
[ext_resource path="res://sounds/select.ogg" type="AudioStream" id=7]
[ext_resource path="res://sprites/background.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 4
outline_color = Color( 0.00784314, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Title:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rotata"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.3, 0.7, 1, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 11.5, -11.4, 0.0, 11.5, -11.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Title:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.8, 0.8 ) ]
}

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="Decorations" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="Decorations"]

[node name="Background" type="Sprite" parent="Decorations/Background"]
position = Vector2( 640, 360 )
scale = Vector2( 10.667, 10.667 )
texture = ExtResource( 8 )

[node name="UI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
margin_right = 1280.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 640, 150 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "BasCAT!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayOffline" type="TextureButton" parent="UI"]
margin_left = 454.0
margin_top = 270.0
margin_right = 826.0
margin_bottom = 416.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/PlayOffline"]
margin_right = 372.0
margin_bottom = 146.0
theme = ExtResource( 4 )
text = "Training mode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiPLAYer" type="TextureButton" parent="UI"]
margin_left = 454.0
margin_top = 466.0
margin_right = 826.0
margin_bottom = 612.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MultiPLAYer"]
margin_right = 372.0
margin_bottom = 146.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 4 )
text = "MultiPLAYer"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Rotata"
anims/RESET = SubResource( 2 )
anims/Rotata = SubResource( 3 )

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="UI/PlayOffline" to="." method="selected_button"]
[connection signal="pressed" from="UI/PlayOffline" to="." method="start_offline"]
[connection signal="mouse_entered" from="UI/MultiPLAYer" to="." method="selected_button"]
[connection signal="pressed" from="UI/MultiPLAYer" to="." method="start_multiplayer"]
